Center aligned the contacts section and uploading correctly the background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body{
 
 body::after{
   content: '';
-  background: url(assets/img/sfondomandala1.png) no-repeat center top;
+  background: url('../img/sfondomandala1.png') no-repeat center top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
